# mlir

mlir/: CMakeLists.txt
mlir/include/mlir/: InitAllDialects.h  InitAllPasses.h
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/Kevin/: CMakeLists.txt  KevinOps.h  KevinOps.td  LowerKevinOps.h  Passes.h  Passes.td
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/Kevin/: CMakeLists.txt  KevinOps.cpp
mlir/lib/Dialect/Kevin/Transforms/: CMakeLists.txt  LowerKevinOps.cpp  MultAddTransToAdds.cpp  PassDetail.h
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/test/Dialect/: ops.mlir
mlir/test/Dialect/Kevin/: kevin-driver.mlir  ops.mlir  ops.mlir.bak
mlir/test/mlir-kevin-driver/: driver_add_3_int.mlir  driver_add_4_float.mlir  lit.local.cfg  lowering_test.mlir  real-driver.mlir  wulala.mlir
mlir/tools/: CMakeLists.txt
mlir/tools/kevin-driver/: CMakeLists.txt  MlirParse.h  mlir-kevin-driver.cpp
mlir/tools/mlir-kevin-runner/: CMakeLists.txt  cwrapper.cpp
mlir/tools/mlir-miopen-driver/: mlir-miopen-driver.cpp
mlir/tools/mlir-rocm-runner/: mlir-rocm-runner.cpp
